Create Account - Primeiro Conteudo

--- a/index.html
+++ b/index.html
@@ -8,20 +8,57 @@
 </head>
 <body>
 
+    <!-- Main container -->
+
     <div class="container">
+
+        <!-- FIRTS CONTENT -->
+
         <div class="content firts-content">
+
+            <!-- firts-column -->
+
             <div class="first-column">
+
                 <h2 class="title">Welcome back!</h2>
                 <p class="description">To keep connected with us</p>
                 <p class="description">please login with your personal info</p>
+                <button class="btn">Sign In</button>
 
+            </div>
+
+            <!-- second-column -->
+
+            <div class="second-column">
+
+                <h2 class="title">Create Account</h2>
+
+                <!-- social-media -->
+
+                <div class="social-media">
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Google</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                    </ul>
+                </div>
+
+                <p class="description">Or use your email for registration:</p>
+
+                 <!-- Form-input -->
+
+                <form class="form">
+                    <input type="text" placeholder="Name">
+                    <input type="email" placeholder="Email">
+                    <input type="password" placeholder="password">
+                    <button class="btn">sign up</button>
+                </form>
             </div>
 
 
         </div>
-
-        <div class="content second-content"></div>
     </div>
+
     
 </body>
 </html>
