Sign in - SegundoConteudo

--- a/index.html
+++ b/index.html
@@ -55,6 +55,50 @@
                 </form>
             </div>
 
+             <!-- SECOND CONTENT -->
+
+        <div class="content second-content">
+
+            <!-- firts-column -->
+
+            <div class="first-column">
+
+                <h2 class="title">Hello, Friend!</h2>
+                <p class="description">Enter your personal details</p>
+                <p class="description">and start journey with us</p>
+                <button class="btn">Sign up</button>
+
+            </div>
+
+            <!-- second-column -->
+
+            <div class="second-column">
+
+                <h2 class="title">Sign in to developer</h2>
+
+                <!-- social-media -->
+
+                <div class="social-media">
+                    <ul>
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Google</a></li>
+                        <li><a href="#">Linkedin</a></li>
+                    </ul>
+                </div>
+
+                <p class="description">Or use your email for registration:</p>
+
+                 <!-- Form-input -->
+
+                <form class="form">
+                    <input type="email" placeholder="Email">
+                    <input type="password" placeholder="password">
+                    <a href="#">Forgout your password?</a>
+                    <button class="btn">sign in</button>
+                </form>
+            </div>
+
+        </div>
 
         </div>
     </div>
