--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <!-- social-media -->
 
                 <div class="social-media">
-                    <ul>
+                    <ul class="list-social-media">
                         <li><a href="#">Facebook</a></li>
                         <li><a href="#">Google</a></li>
                         <li><a href="#">Linkedin</a></li>
