Estilizando - title & botões

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
             <div class="first-column">
 
-                <h2 class="title">Welcome back!</h2>
+                <h2 class="title title-primary">Welcome back!</h2>
                 <p class="description">To keep connected with us</p>
                 <p class="description">please login with your personal info</p>
-                <button class="btn">Sign In</button>
+                <button class="btn btn-primary">Sign In</button>
 
             </div>
 
