--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela de Login</title>
 
-    <link rel="stylesheet" href="css\style.css"
+    <link rel="stylesheet" href="css\style.css">
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
 </head>
 <body>
@@ -24,8 +27,8 @@
             <div class="first-column">
 
                 <h2 class="title title-primary">Welcome back!</h2>
-                <p class="description">To keep connected with us</p>
-                <p class="description">please login with your personal info</p>
+                <p class="description description-primary">To keep connected with us</p>
+                <p class="description description-primary">please login with your personal info</p>
                 <button class="btn btn-primary">Sign In</button>
 
             </div>
@@ -34,19 +37,19 @@
 
             <div class="second-column">
 
-                <h2 class="title">Create Account</h2>
+                <h2 class="title title-second">Create Account</h2>
 
                 <!-- social-media -->
 
                 <div class="social-media">
                     <ul class="list-social-media">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Google</a></li>
-                        <li><a href="#">Linkedin</a></li>
+                        <li class="item-social-media"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="item-social-media"><a href="#"><i class="fab fa-google"></i></a></li>
+                        <li class="item-social-media"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
                     </ul>
                 </div>
 
-                <p class="description">Or use your email for registration:</p>
+                <p class="description description-second">Or use your email for registration:</p>
 
                  <!-- Form-input -->
 
