--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
                 <div class="social-media">
                     <ul class="list-social-media">
-                        <li class="item-social-media"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                        <li class="item-social-media"><a href="#"><i class="fab fa-google"></i></a></li>
-                        <li class="item-social-media"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                        <a href="#"><li class="item-social-media"><i class="fab fa-facebook-f"></i></li></a>
+                        <a href="#"><li class="item-social-media"><i class="fab fa-google"></i></li></a>
+                        <a href="#"><li class="item-social-media"><i class="fab fa-linkedin-in"></i></li></a>
                     </ul>
                 </div>
 
@@ -54,10 +54,25 @@
                  <!-- Form-input -->
 
                 <form class="form">
-                    <input type="text" placeholder="Name">
-                    <input type="email" placeholder="Email">
-                    <input type="password" placeholder="password">
-                    <button class="btn">sign up</button>
+
+                    <label class="label-input" for="">
+                        <i class="far fa-user icon-modify"></i>
+                        <input type="text" placeholder="Name">
+                    </label>
+
+                    <label class="label-input" for="">
+                        <i class="far fa-envelope icon-modify"></i>
+                        <input type="email" placeholder="Email">
+                    </label>
+
+                    <label class="label-input" for="">
+                        <i class="fas fa-lock icon-modify"></i>
+                        <input type="password" placeholder="password">
+                    </label>
+                    
+                    <button class="btn btn-second">sign up</button>
+
+
                 </form>
             </div>
 
