Estilizando - Link Media

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
 
                 <div class="social-media">
                     <ul class="list-social-media">
-                        <a href="#"><li class="item-social-media"><i class="fab fa-facebook-f"></i></li></a>
-                        <a href="#"><li class="item-social-media"><i class="fab fa-google"></i></li></a>
-                        <a href="#"><li class="item-social-media"><i class="fab fa-linkedin-in"></i></li></a>
+                        <a class="link-social-media" href="#"><li class="item-social-media"><i class="fab fa-facebook-f"></i></li></a>
+                        <a class="link-social-media" href="#"><li class="item-social-media"><i class="fab fa-google"></i></li></a>
+                        <a class="link-social-media" href="#"><li class="item-social-media"><i class="fab fa-linkedin-in"></i></li></a>
                     </ul>
                 </div>
 
