--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Tela de Login</title>
 
     <link rel="stylesheet" href="css\style.css">
-
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
+    <script src="js/app.js"></script>
 
 </head>
 <body>
@@ -29,7 +30,7 @@
                 <h2 class="title title-primary">Welcome back!</h2>
                 <p class="description description-primary">To keep connected with us</p>
                 <p class="description description-primary">please login with your personal info</p>
-                <button class="btn btn-primary">Sign In</button>
+                <button id="signin" class="btn btn-primary">Sign In</button>
 
             </div>
 
@@ -71,7 +72,6 @@
                     </label>
                     
                     <button class="btn btn-second">sign up</button>
-
 
                 </form>
             </div>
@@ -124,6 +124,5 @@
         </div>
     </div>
 
-    
 </body>
 </html>
